kubernetes/apps/vpn-gateway/gateway/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# This policy allows the vpn-gateway to go out to the internet on port 51820 and also to talk to any cluster entities
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  egress:
    # Allow WireGuard VPN traffic to the internet
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
    # Allow DHCP traffic to the gateway
    - toPorts:
        - ports:
            - port: "67"
              protocol: UDP
        - ports:
            - port: "68"
              protocol: UDP
    # Broad cluster communication (VXLAN + ICMP ping + everything else
    - toEntities:
        - cluster
        - remote-node
        - host

  ingress:
    # Allow inbound DHCP requests + responses
    - fromEntities:
        - cluster
        - remote-node
        - host
    - toPorts:
        - ports:
            - port: "67"
              protocol: UDP
        - ports:
            - port: "68"
              protocol: UDP
    # Allow VXLAN traffic (any UDP) from cluster pods
    - fromEntities:
        - cluster
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
    # Allow everything else from cluster pods/nodes
    - fromEntities:
        - cluster
        - remote-node
        - host

    # Allow ICMP echo
    - icmps:
        - fields:
            - type: 8
              family: IPv4
---
# Admission webhook traffic (K8s API server -> pod-gateway)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-webhook
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  ingress:
    - toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
# This policy allows inbound connections to the vpn-gateway on port 80 to gluetun http_control_server
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway-http-control
  labels:
    app.kubernetes.io/instance: &instance vpn-gateway
    app.kubernetes.io/name: &name pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: *instance
      app.kubernetes.io/name: *name
  ingress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
# clusterwide vxlan and dhcp policy for the vpn-gateway, since it needs to talk to other nodes and the cluster network
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-pod-gateway-vxlan
spec:
  nodeSelector: {}
  ingress:
    # Allow VXLAN from other nodes (port 8472)
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP

    # Allow DHCP
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "67"
              protocol: UDP
            - port: "68"
              protocol: UDP
